--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,3 +1,52 @@
+/* Darker background to make content pop */
+:root[data-bs-theme="dark"] {
+  --bs-body-bg: #181a1d;
+  --bs-body-bg-rgb: 24, 26, 29;
+
+  /* Lime green primary color */
+  --bs-primary: #84cc16;
+  --bs-primary-rgb: 132, 204, 22;
+  --bs-link-color: #84cc16;
+  --bs-link-color-rgb: 132, 204, 22;
+  --bs-link-hover-color: #a3e635;
+}
+
+/* Override Bootstrap button primary colors */
+.btn-primary {
+  --bs-btn-bg: #84cc16;
+  --bs-btn-border-color: #84cc16;
+  --bs-btn-hover-bg: #6ba30f;
+  --bs-btn-hover-border-color: #6ba30f;
+  --bs-btn-active-bg: #5a8a0d;
+  --bs-btn-active-border-color: #5a8a0d;
+  --bs-btn-disabled-bg: #84cc16;
+  --bs-btn-disabled-border-color: #84cc16;
+  color: #000;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
+  color: #000;
+}
+
+.btn-outline-primary {
+  --bs-btn-color: #84cc16;
+  --bs-btn-border-color: #84cc16;
+  --bs-btn-hover-bg: #84cc16;
+  --bs-btn-hover-border-color: #84cc16;
+  --bs-btn-hover-color: #000;
+  --bs-btn-active-bg: #6ba30f;
+  --bs-btn-active-border-color: #6ba30f;
+  --bs-btn-active-color: #000;
+}
+
+.text-primary {
+  color: #84cc16 !important;
+}
+
+.bg-primary {
+  background-color: #84cc16 !important;
+}
+
 .sidebar {
   position: sticky;
   top: 0;
